Fixed spacing, added tweet to post.

--- a/src/Components/Post.css
+++ b/src/Components/Post.css
@@ -15,15 +15,15 @@ h2 {
   font-size: large;
 }
 
-.DisplayPost p, .DisplayPost ol, .DisplayPost li {
+.DisplayPost p, .DisplayPost ol {
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
+.DisplayPost li, .DisplayPost li > p {
   margin-bottom: 1rem;
   margin-top: 1rem;
 }
-
-/* .DisplayPost li, .DisplayPost li > p {
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-} */
 
 .DisplayPost img {
   width: 100%;
@@ -47,7 +47,7 @@ h2 {
 
 .DisplayPost pre[class*="language-"] {
   margin-bottom: 1.5em;
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 
 .DisplayPost .series-link {
