--- a/src/Components/flexbox.css
+++ b/src/Components/flexbox.css
@@ -13,6 +13,10 @@
   flex: 1;
 }
 
+.flex-big-item {
+  flex: 2;
+}
+
 .flex-shrink-no {
   flex-shrink: 0;
 }
@@ -21,5 +25,16 @@
   /* start of medium tablet styles */
   .flex-container {
     display: block;
+  }
+}
+
+@media screen and (max-width: 1020px) {
+  /* smaller than a 720p display width */
+  .flex-big-item {
+    flex: 1;
+  }
+
+  .flex-item {
+    flex: 1;
   }
 }
